portico: Fix subhead line break on mobile.
The line break in the homepage subhead looked weird on mobile.
The line now only breaks on display widths greater than 767px.

--- a/static/styles/portico.scss
+++ b/static/styles/portico.scss
@@ -1890,6 +1890,10 @@ input.new-organization-button {
         display: inline-block;
         margin-top: 10px;
     }
+
+    .line-break-desktop {
+    	display: none;
+    }
 }
 
 @media (max-height: 600px) {
